--- a/CustomVideoRender/build.gradle
+++ b/CustomVideoRender/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
-        minSdkVersion 15
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -29,13 +29,11 @@ android {
         targetCompatibility = 1.8
     }
 
-
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
         }
     }
-
 
 }
 
@@ -43,4 +41,6 @@ dependencies {
     implementation fileTree(dir: '../main/libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation project(path: ':common')
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation project(path: ':faceunity')
 }
