--- a/CustomVideoRender/src/main/AndroidManifest.xml
+++ b/CustomVideoRender/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.cc.customrender" >
 
     <application>
+        <activity android:name="im.zego.customrender.ui.FUVideoRenderUI" />
         <activity android:name="im.zego.customrender.ui.ZGVideoRenderUI"/>
         <activity android:name="im.zego.customrender.ui.ZGVideoRenderTypeUI"/>
     </application>
