--- a/DebugAndConfig/src/main/AndroidManifest.xml
+++ b/DebugAndConfig/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <provider
         android:name="androidx.core.content.FileProvider"
-        android:authorities="im.zego.expresssample.fileprovider"
+        android:authorities="${applicationId}.fileprovider"
         android:grantUriPermissions="true"
         android:exported="false">
         <meta-data
